- Update to newest versions of Geometry.h/cxx
- Hardcoded match window in plots should probably come from a conf file or a
  DAQManager parameter.
    - We can have a field for setting it in the Settings panel.
- Should Geometry's run number be coming from the conf file or system time?
- Should we be reading/writing the time correction?

-------------------------------------------------------------------------------

## 2024-04-22

## Summary

- Started event display integration.
    - Residuals Display ...COMPLETE
    - Efficiency Display...PENDING
    - Event Display     ...PENDING

## Added

- Added tabs for residuals, efficiency, and event displays.
- The error log now displays a short message when there are no errors.
- Added residuals and efficiency plots to Plots.h.
- Populated residuals plots in Plots::binEvents().
- Added hit clustering to EventDecoding::processEvents().
- EventDecoding::processEvents() now sets Event::SetPassCheck() with the result
  of recoUtil::CheckEvent().

## Changed

- Moved tabs into a 'Displays' folder for organization.
- Tab width/height now depend on common variables set in the TabPanel 
  constructor.
- All tabs with canvases now inherit from 'CanvasTab'.
- Closing a tab now opens the tab immediately before the closed tab.
    - TODO: Try opening the most recently viewed tab instead.

## Removed

- MUON_RECO -- Removed unnecessary copy constructor in Event.h/cpp. There's no
               explicit heap memory that needs to be copied, and the existing
               constructor fails to preserve all data members.

-------------------------------------------------------------------------------

## 2024-04-22

## Summary

- Tab and menubar system reworks.

## Added

- Menu system rework. The menu bar now uses a functional pattern, where new
  menu items are associated with handler functions.
- Tab system rework.

## Fixed

- Plot saving produced a segfault when called before a run was started, as it