@@ -66,6 +66,9 @@ Plots::Plots(const Plots &other) : geo(other.geo), rtp(other.rtp) {
 
 	residuals       = dynamic_cast<TH1D*>(other.residuals      ->Clone());
 
+	nHits = other.nHits;
+	nMiss = other.nMiss;
+
 }
 
 Plots::Plots(Geometry &geo, RTParam &rtp) : geo(geo), rtp(rtp) {
@@ -113,6 +116,16 @@ Plots::Plots(Geometry &geo, RTParam &rtp) : geo(geo), rtp(rtp) {
 	}
 
 	p_tdc_hit_rate_graph    .reserve(Geometry::MAX_TDC);
+
+	nHits.resize(Geometry::MAX_TUBE_LAYER);
+	nMiss.resize(Geometry::MAX_TUBE_LAYER);
+
+	for(size_t i = 0; i < Geometry::MAX_TUBE_LAYER; ++i) {
+
+		nHits[i].resize(Geometry::MAX_TUBE_COLUMN);
+		nMiss[i].resize(Geometry::MAX_TUBE_COLUMN);
+
+	}
 
 	vector<double> p_tdc_hit_rate_x(Geometry::MAX_TDC_CHANNEL);
 	iota(p_tdc_hit_rate_x.begin(), p_tdc_hit_rate_x.end(), 0.);
@@ -355,8 +368,6 @@ void Plots::binEvent(Event &e) {
 		}
 
 		// Populate efficiency
-		/*
-		double _hitX, _hitY;
 		for(int tdc_index = 0; tdc_index < Geometry::MAX_TDC; ++tdc_index) {
 
 			for(int ch_index = 0; ch_index < Geometry::MAX_TDC_CHANNEL; ++ch_index) {
@@ -364,18 +375,21 @@ void Plots::binEvent(Event &e) {
 				if(geo.IsActiveTDCChannel(tdc_index, ch_index)) {
 
 					int iL, iC;
+					double _hitX, _hitY;
 
 					geo.GetHitLayerColumn(tdc_index, ch_index, &iL, &iC);
 					geo.GetHitXY(tdc_index, ch_index, &_hitX, &_hitY);
 
 					// get track x position and figure out what tube(s) it may go through
-					double trackDist = tp.Distance_XY(_hitX, _hitY);
+					double trackDist = tp.Distance(Hit(
+						0, 0, 0, 0, 0, 0, iL, iC, _hitX, _hitY
+					));
 
 					if(trackDist <= Geometry::column_distance / 2) {
 
 						bool tubeIsHit = false;
 
-						for(Hit hit : e.Hits()) {
+						for(Hit hit : e.WireHits()) {
 
 							int hit_layer;
 							int hit_column;
@@ -432,7 +446,6 @@ void Plots::binEvent(Event &e) {
 			}
 
 		}
-		*/
 
 		delete optTree;
 
@@ -492,6 +505,20 @@ void Plots::clear() {
 
 		vec.clear();
 		vec.resize(Geometry::MAX_TDC_CHANNEL);
+
+	}
+
+	for(vector<double> &vec : nHits) {
+
+		vec.clear();
+		vec.resize(Geometry::MAX_TUBE_COLUMN);
+
+	}
+
+	for(vector<double> &vec : nMiss) {
+
+		vec.clear();
+		vec.resize(Geometry::MAX_TUBE_COLUMN);
 
 	}
 
