@@ -60,7 +60,10 @@ struct Plots {
 
 	TH1D *                           residuals               ;
 
-	void binEvent     (MuonReco::Event &e);
+	std::vector<std::vector<double>> nHits                   ;
+	std::vector<std::vector<double>> nMiss                   ;
+
+	void binEvent     (MuonReco::Event &e  );
 	void updateHitRate(int total_events    );
 	void clear        (                    );
 
