@@ -1,22 +1,24 @@
-#include "EventDisplay.h"
+#include "EventTab.h"
 
 #include "TCanvas.h"
 
 using namespace std;
 
-EventDisplay::EventDisplay(const TGWindow *p, int width, int height) 
+EventTab::EventTab(const TGWindow *p, int width, int height) 
 	: CanvasTab(p, "Event Display", width, height) {
+
+	// display.SetCanvas(GetCanvas());
 
 	// Make sure an update happens when the tab is opened
 	update();
 
 }
 
-EventDisplay::~EventDisplay() {
+EventTab::~EventTab() {
 
 }
 
-void EventDisplay::update() {
+void EventTab::update() {
 
 	GetCanvas()->cd();
 	
